--- a/music_symfony/composer.json
+++ b/music_symfony/composer.json
@@ -18,10 +18,13 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/security-bundle": "7.2.*",
+        "symfony/security-core": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
+        "fzaninotto/faker": "^1.5",
         "symfony/maker-bundle": "^1.61"
     },
     "config": {
