--- a/music_symfony/.env.dev
+++ b/music_symfony/.env.dev
@@ -1,4 +1,5 @@
 
 ###> symfony/framework-bundle ###
 APP_SECRET=0d894c597037322250727f03f736f953
+KEY_API=2zSMW3DajQ6yBCv4
 ###< symfony/framework-bundle ###
